# ellepi

./: README.md  setup.cfg
datasets/: convert.py
ellepi/: __init__.py  argparser.py  ellepi.py  genetic.py  prolog_interface.py  variable_placer.py
