[metadata]
name = ellepi
version = 0.0.1
author = Damiano Azzolini
author_email = damiano.azzolini@unife.it
description = ellepi: EvoLutionary LEarning of ProbabIlistic logic programs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/damianoazzolini/ellepi
project_urls =
    Bug Tracker = https://github.com/damianoazzolini/ellepi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
packages = ellepi
python_requires = >=3.9
install_requires =
    numpy
    scipy
    clingo
    janus_swi

[options.entry_points]
console_scripts =
    ellepi = ellepi:main